# mq-controller

./: CHANGELOG.md  README.md  config.json  mq-controller.cabal
app/: Controller.hs
docker/: Dockerfile
src/System/MQ/: Controller.hs
