name:                mq-controller
version:             0.1.0.0
synopsis:            Controller for Monique
description:         Controller for Monique
homepage:            https://github.com/biocad/mq-controller
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii, Vladimir Morozov, Alexander Sadovnikov
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2018, BIOCAD
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.MQ.Controller
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hslogger
                     , mq
                     , mq-component-hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable mq-controller
  hs-source-dirs:      app
  main-is:             Controller.hs
  build-depends:       base
                     , aeson-picker
                     , bcd-config
                     , containers
                     , mq
                     , mq-component-hs
                     , mq-controller
                     , mtl
                     , text
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

source-repository head
  type:     git
  location: https://github.com/biocad/mq-controller
