name:                mq-controller
version:             0.1.2.0
synopsis:            Controller for Monique
description:         Controller for Monique
homepage:            https://github.com/biocad/mq-controller
license:             BSD3
license-file:        LICENSE
author:              Bogdan Neterebskii, Vladimir Morozov, Alexander Sadovnikov
maintainer:          neterebskiy@biocad.ru
copyright:           (c) 2018, BIOCAD
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.MQ.Controller
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , aeson-picker
                     , bcd-config
                     , bytestring
                     , containers
                     , hslogger
                     , mq
                     , mq-component-hs
                     , mtl
                     , text
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable mq-controller
  hs-source-dirs:      app
  main-is:             Controller.hs
  build-depends:       base
                     , mq-component-hs
                     , mq-controller
                     
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

source-repository head
  type:     git
  location: https://github.com/biocad/mq-controller
